<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8BC34A"
    android:backgroundTint="@android:color/darker_gray"
    tools:context=".Calculate"
    android:orientation="vertical">

    <TextView
        android:layout_width="194dp"
        android:layout_height="43dp"
        android:textStyle="bold"
        android:scrollbarSize="30dp"
        android:text="@string/calculator"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="30sp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="100dp"/>


    <EditText
        android:id="@+id/num1"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="150dp"
        android:layout_marginStart="70dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/number1_0"
        android:inputType="number" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="195dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/number2_0"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/equal"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="340dp"
        android:layout_marginStart="70dp"
        android:background="@android:color/white"
        android:text="@string/equal"
        android:textColorLink="#673AB7"
        android:textSize="25sp" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="240dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:onClick="add"
        android:text="@string/add" />

    <!-- A button to perform subtraction operation. -->
    <Button
        android:id="@+id/Sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="285dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:onClick="Sub"
        android:text="@string/subtract" />

    <Button
        android:id="@+id/div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:layout_marginStart="170dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:onClick="Div"
        android:text="@string/divide"/>

    <!-- A button to perform multiplication. -->
    <Button
        android:id="@+id/mul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="285dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:onClick="Mul"
        android:text="@string/multiply" />

</RelativeLayout>